gcc/testsuite/gm2/iso/pass/simpleforward.mod
MODULE simpleforward ;


PROCEDURE foo ; FORWARD ;

PROCEDURE foo ;
BEGIN
END foo ;


BEGIN
   foo
END simpleforward.
