gcc/testsuite/gm2/iso/fail/badparam.mod
IMPLEMENTATION MODULE badparam ;

PROCEDURE foo (c: CARDINAL) ;
BEGIN

END foo ;

END badparam.